[gd_scene load_steps=5 format=3 uid="uid://dlf0emj0lpscl"]

[ext_resource type="Script" path="res://Objects/DisruptionField.gd" id="1_o41pu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydo4k"]

[sub_resource type="Gradient" id="Gradient_n5lv6"]
interpolation_mode = 1
offsets = PackedFloat32Array()
colors = PackedColorArray()

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dn75u"]
gradient = SubResource("Gradient_n5lv6")
width = 1000
height = 1000
fill_to = Vector2(0.05, 0.05)
repeat = 1

[node name="DisruptionField" type="Area2D"]
collision_layer = 256
collision_mask = 64
monitorable = false
script = ExtResource("1_o41pu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ydo4k")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.392157)
scale = Vector2(1e-05, 1e-05)
texture = SubResource("GradientTexture2D_dn75u")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
